# dataagregator

./: conanfile.py
src/: CMakeLists.txt
src/DaggyCore/: Command.h
src/daggy_python/: CMakeLists.txt  bindings.h  bindings.xml  bindings.xml.in
